# OpenFSD

./: Cargo.toml  README.md  config.toml
examples/: simple_client.rs  test_client.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_create_users.rs  m20250101_000002_create_client_whitelist.rs
src/: client.rs  config.rs  lib.rs  main.rs  packet.rs  server.rs
src/auth/: mod.rs  password.rs  validator.rs
src/db/: mod.rs  service.rs
src/db/entities/: client_whitelist.rs  mod.rs  user.rs
src/server/: config.rs  connection.rs  mod.rs  processor.rs
src/server/handlers/: auth.rs  flight_plan.rs  message.rs  mod.rs  position.rs  request.rs
